# MLE_Lifen_Challenge_2023

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
lifen_app/algo/: patient_name_extractor.py
lifen_app/asgi/: __init__.py  app.py
lifen_app/labels/: documents.py
lifen_app/models/: document_input.py  patient_info.py
lifen_app/views/: ping.py  router_v0.py
tests/: conftest.py  test_algo.py  test_endpoints.py
tests/documents/: document_test_0.json
tests/models/: test_document_input_models.py
